[gd_scene load_steps=5 format=3 uid="uid://dehqswvgpq0js"]

[ext_resource type="Script" path="res://scripts/smart_tag_entry.gd" id="1_2atgu"]
[ext_resource type="Script" path="res://scripts/tag_list_script.gd" id="2_dbwf6"]
[ext_resource type="Texture2D" uid="uid://bvaokn11jui2a" path="res://textures/icons/sort_icon.svg" id="2_dmm72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f178j"]
bg_color = Color(0.211765, 0.282353, 0.396078, 1)

[node name="SmartEntry" type="Control"]
custom_minimum_size = Vector2(192, 256)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_2atgu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f178j")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "TitleName"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="SortButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Sort Alphabetically"
icon = ExtResource("2_dmm72")

[node name="SmartSuggestionItemList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
select_mode = 1
script = ExtResource("2_dbwf6")

[node name="DataEntry" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SuggestionLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/DataEntry"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 1
placeholder_text = "Suggestion"

[node name="AddDataButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DataEntry"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Add"
